# LearningGithubActions

./: CMakeLists.txt  README.md  calculator.cpp  calculator.hpp  main.cpp  test_calculator.cpp
.github/workflows/: c-cpp.yml
